workshop/simulator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-simulator-deployment-<naam>
  namespace: backend-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-simulator-<naam>
  template:
    metadata:
      labels:
        app: sensor-simulator-<naam>
    spec:
      containers:
        - name: simulator
          image: VUL_BESCHIKBARE_IMAGE_IN
          ports:
            - containerPort: 5000
