workshop/simulator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-simulator-service-<naam>
  namespace: backend-workshop
spec:
  selector:
    app: sensor-simulator-<naam>
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
